[package]
name = "concurrent-event"
description = "An event system which invokes event handlers in parallel."
license = "MIT OR Apache-2.0"
version = "0.1.0"
authors = ["florian1345 <florian1345@gmx.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
crossbeam = "0.7.3"
