[package]
name = "concurrent-event"
description = "An event system which invokes event handlers concurrently."
categories = [ "concurrency" ]
keywords = [ "event", "concurrent", "parallel" ]
version = "0.1.0"
repository = "https://github.com/florian1345/concurrent-event"
documentation = "https://docs.rs/concurrent-event"
license = "MIT OR Apache-2.0"
authors = ["florian1345 <florian1345@gmx.de>"]
edition = "2018"

[badges]
travis-ci = { repository =  "https://github.com/florian1345/concurrent-event", branch = "master" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
crossbeam = "0.7.3"
